--- a/dishmap/src/main/res/values/styles.xml
+++ b/dishmap/src/main/res/values/styles.xml
@@ -1,17 +1,6 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
- <!--       <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>-->
 
-        <!-- Status Bar -->
-        <item name="android:windowTranslucentStatus">true</item>
-        <!-- Navigation Bar -->
-        <item name="android:windowTranslucentNavigation">false</item>
-    </style>
 
     <style name="DialogTheme" parent="android:style/Theme.Dialog">
         <item name="android:windowFrame">@null</item>
@@ -30,4 +19,14 @@
         <item name="android:windowBackground">@color/white</item>
         <item name="android:windowNoTitle">true</item>
     </style>
+
+    <!-- 自定义loading dialog -->
+    <style name="LoadingDialog" parent="android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
+
 </resources>
