--- a/dishmap/src/main/res/values/styles.xml
+++ b/dishmap/src/main/res/values/styles.xml
@@ -27,6 +27,8 @@
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowIsTranslucent">true</item><!--半透明-->
+        <item name="android:backgroundDimAmount">0</item>
     </style>
 
 </resources>
